force-app/main/default/objects/MUSW__Inspection_Violation__c/MUSW__Inspection_Violation__c.object-meta.xml
<CustomObject>
    <label>Inspection Violation</label>
    <nameField>
        <displayFormat>IV-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>