force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/Days_to_correct__c.field-meta.xml
<CustomField>
    <fullName>Days_to_correct__c</fullName>
    <formula>MUSW__Violation__r.Days_to_correct__c</formula>
    <label>Days to correct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>