force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/MUSW__Complaint2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Complaint2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Complaint.</description>
    <label>Complaint</label>
    <referenceTo>MUSW__Complaint2__c</referenceTo>
    <relationshipLabel>Inspection Violations</relationshipLabel>
    <relationshipName>Inspection_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>