force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/MUSW__DREgen__c.field-meta.xml
<CustomField>
    <fullName>MUSW__DREgen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the record was copied from a prior inspection as opposed to a new inspection. This is used by the DRE in the out of the box Code Enforcement Configuration.</description>
    <label>DREgen</label>
    <type>Checkbox</type>
</CustomField>