force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/MUSW__Inspection__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Inspection__c</fullName>
    <description>Associated Inspection (required). This allows multiple violations to be recorded per inspection.</description>
    <label>Inspection</label>
    <referenceTo>MUSW__Inspection__c</referenceTo>
    <relationshipLabel>Violations</relationshipLabel>
    <relationshipName>Inspection_Violations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>