force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/MUSW__Parcel__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parcel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Parcel (Address).</description>
    <label>Parcel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Parcel__c.MUSW__Historic__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Parcel__c</referenceTo>
    <relationshipLabel>Inspection Violations</relationshipLabel>
    <relationshipName>Inspection_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>