force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/MUSW__Violation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Violation__c</fullName>
    <description>Associated Violation. This allows the same violation to be worked within the re-inspection.</description>
    <label>Violation</label>
    <referenceTo>MUSW__Violation__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Violation_Inspections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>