force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/Ordinance__c.field-meta.xml
<CustomField>
    <fullName>Ordinance__c</fullName>
    <formula>MUSW__Violation__r.Ordinance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordinance</label>
    <type>Text</type>
</CustomField>