force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/Permit2__c.field-meta.xml
<CustomField>
    <fullName>Permit2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Inspection Violations</relationshipLabel>
    <relationshipName>Inspection_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>