force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/Violation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Violation_DateTime__c</fullName>
    <formula>IF(NOT(ISBLANK( MUSW__Violation__r.Cited_DateTime__c)), MUSW__Violation__r.Cited_DateTime__c, MUSW__Violation__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Violation Date</label>
    <type>DateTime</type>
</CustomField>