force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/Violation_Status__c.field-meta.xml
<CustomField>
    <fullName>Violation_Status__c</fullName>
    <label>Violation Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>