force-app/main/default/objects/MUSW__Inspection_Violation__c/fields/ViolationIsClosed__c.field-meta.xml
<CustomField>
    <fullName>ViolationIsClosed__c</fullName>
    <formula>MUSW__Violation__r.IsClosed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ViolationIsClosed</label>
    <type>Text</type>
</CustomField>